[package]
name = "day_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fileutils = { path = "../fileutils" }
transpose = "0.2.2"
lazy_static = "1.4.0"
regex = "1.4.3"

[dev-dependencies]
test-case = "2.2.2"